--- a/testoct27.html
+++ b/testoct27.html
@@ -560,7 +560,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 .Rplayer-btn.selected,
 .rest-btn.selected {
   outline: 2px solid #4caf50;
-  background: #4caf50 !important;
+  background: yellow !important;
   color: #fff;
   box-shadow: 0 0 10px #4caf50;
   animation: borderPulse 1s ease-in-out infinite;
