--- a/testoct27.html
+++ b/testoct27.html
@@ -1626,10 +1626,7 @@ function makePlayerButton(name, teamSide, gameIndex, playerIndex, data, index) {
 }
 
 
-
-   
 function handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index, movingPlayer = null) {
-  // ✅ For desktop drag
   const drop = !movingPlayer && e.dataTransfer
     ? JSON.parse(e.dataTransfer.getData('text/plain'))
     : { type: 'rest', player: movingPlayer };
@@ -1659,18 +1656,19 @@ function handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index, 
   restCount.set(baseNewPlayer, Math.max((restCount.get(baseNewPlayer) || 0) - 1, 0));
   data.resting = data.resting.filter(p => p && p !== '(Empty)');
 
+  // ✅ Redraw the round
   showRound(index);
 
-  // ✨ Blink the updated button
+  // 🎯 Blink the *new target* player button after DOM update
   setTimeout(() => {
-    const selector = teamSide === 'L' ? '.Lplayer-btn' : '.Rplayer-btn';
-    const targetBtns = document.querySelectorAll(selector);
-    const target = targetBtns[playerIndex + gameIndex * 2]; // rough mapping, adjust if needed
+    const selector = `.Lplayer-btn, .Rplayer-btn`;
+    const target = Array.from(document.querySelectorAll(selector))
+      .find(btn => btn.innerText.trim() === baseNewPlayer);
     if (target) {
       target.classList.add('blink');
       setTimeout(() => target.classList.remove('blink'), 1000);
     }
-  }, 50);
+  }, 80);
 }
 
 
