--- a/testoct28.html
+++ b/testoct28.html
@@ -1212,7 +1212,7 @@ function AischedulerNextRound() {
 
  
 
-    if (fixedPairPlayers.size > 0) {
+    if (fixedPairPlayers.size > 0 && numResting > 1) {
 
         // Example threshold: prioritize fixed pairs if there are at least as many as free players
 
