--- a/testoct29.html
+++ b/testoct29.html
@@ -211,6 +211,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 .fixed-pair-remove:hover { color: #a00; }
 
+
 #importModal {
   display: none;
   position: fixed;
@@ -218,30 +219,54 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
   width: 100vw; height: 100vh;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1000;
-  font-size: 22px; /* ⬆️ slightly larger overall text */
+  font-size: 22px;
 }
 
 #importModal .modal-content {
   background: white;
   color: black;
-  max-width: 500px; /* ⬆️ a bit wider for larger text */
+  max-width: 500px;
   margin: 100px auto;
-  padding: 24px; /* ⬆️ extra padding for balance */
+  padding: 24px;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 22px; /* ⬆️ ensure all inner text inherits */
+  font-size: 22px;
 }
 
 #importModal textarea {
   width: 100%;
   box-sizing: border-box;
   margin-bottom: 18px;
-  padding: 10px 12px; /* ⬆️ more space inside */
+  padding: 10px 12px;
   border-radius: 8px;
   resize: vertical;
-  font-size: 20px; /* ⬆️ bigger typing area text */
+  font-size: 20px;
+}
+
+/* 🧍‍♂️🧍‍♀️ Gender section */
+.gender-section {
+  margin-bottom: 18px;
+  font-size: 20px;
+}
+
+.gender-options {
+  display: flex;
+  gap: 20px;
+  margin-top: 8px;
+}
+
+.gender-options label {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.gender-options input[type="radio"] {
+  transform: scale(1.4);
+  accent-color: #009c3c; /* ✅ matches OK button color */
 }
 
 .modal-buttons {
@@ -252,10 +277,10 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 .ok-btn,
 .cancel-btn {
-  font-size: 18px; /* ⬆️ larger button text */
+  font-size: 18px;
   font-weight: bold;
   cursor: pointer;
-  padding: 10px 16px; /* ⬆️ larger click area */
+  padding: 10px 16px;
   border-radius: 8px;
   border: none;
   color: white;
@@ -274,7 +299,6 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 .cancel-btn:hover {
   background: #ff3b3b;
 }
-
 
 .main-action {
 
@@ -607,24 +631,30 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
         </div>
 
-        <div id="importModal">
 
-            <div class="modal-content">
+<div id="importModal">
+  <div class="modal-content">
+    <h2>Import Players</h2>
 
-                <textarea id="players-textarea" rows="8" placeholder="Name,Gender&#10;Kari,Male&#10;Bhavani,Female"></textarea>
+    <label for="playerData">Paste or type player names:</label>
+    <textarea id="playerData" rows="5" placeholder="Example: John, Lisa, Ken"></textarea>
 
-                <div class="modal-buttons">
+    <!-- 🧍‍♂️🧍‍♀️ Gender selection -->
+    <div class="gender-section">
+      <label>Select Gender:</label>
+      <div class="gender-options">
+        <label><input type="radio" name="gender" value="male"> Male</label>
+        <label><input type="radio" name="gender" value="female"> Female</label>
+      </div>
+    </div>
 
-                    <button class="ok-btn" onclick="addPlayersFromText()">Import</button>
-
-                    <button class="cancel-btn" onclick="hideImportModal()">Cancel</button>
-
-                </div>
-
-            </div>
-
-        </div>
-
+    <div class="modal-buttons">
+      <button class="ok-btn">OK</button>
+      <button class="cancel-btn">Cancel</button>
+    </div>
+  </div>
+</div>
+        
         <!-- Add Player Form -->
 
         <div class="card">
