--- a/testoct29.html
+++ b/testoct29.html
@@ -211,7 +211,6 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 .fixed-pair-remove:hover { color: #a00; }
 
-
 #importModal {
   display: none;
   position: fixed;
@@ -245,28 +244,31 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
   font-size: 20px;
 }
 
-/* 🧍‍♂️🧍‍♀️ Gender section */
-.gender-section {
-  margin-bottom: 18px;
+/* 🎯 Gender row: compact, centered, clean */
+.gender-row {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 18px;
+  margin-bottom: 20px;
   font-size: 20px;
 }
 
-.gender-options {
-  display: flex;
-  gap: 20px;
-  margin-top: 8px;
+.gender-row span {
+  font-weight: bold;
+  min-width: 90px;
 }
 
-.gender-options label {
+.gender-row label {
   display: flex;
   align-items: center;
   gap: 6px;
   cursor: pointer;
 }
 
-.gender-options input[type="radio"] {
-  transform: scale(1.4);
-  accent-color: #009c3c; /* ✅ matches OK button color */
+.gender-row input[type="radio"] {
+  transform: scale(1.3);
+  accent-color: #009c3c;
 }
 
 .modal-buttons {
@@ -299,6 +301,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 .cancel-btn:hover {
   background: #ff3b3b;
 }
+
 
 .main-action {
 
@@ -639,13 +642,11 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
     <label for="playerData">Paste or type player names:</label>
     <textarea id="playerData" rows="5" placeholder="Example: John, Lisa, Ken"></textarea>
 
-    <!-- 🧍‍♂️🧍‍♀️ Gender selection -->
-    <div class="gender-section">
-      <label>Select Gender:</label>
-      <div class="gender-options">
-        <label><input type="radio" name="gender" value="male"> Male</label>
-        <label><input type="radio" name="gender" value="female"> Female</label>
-      </div>
+    <!-- 🎯 Gender Selection (clean & aligned) -->
+    <div class="gender-row">
+      <span>Gender:</span>
+      <label><input type="radio" name="gender" value="male"> Male</label>
+      <label><input type="radio" name="gender" value="female"> Female</label>
     </div>
 
     <div class="modal-buttons">
